test-suite/bugs/bug_18215.v
Fail Definition a := fix f {struct unbound} :=
  fun (t : unit) => tt.
